Initial commit – user controls, login, rental modules

--- a/aejynmain/App.config
+++ b/aejynmain/App.config
@@ -3,7 +3,7 @@
 		 connectionString="
 			 Server=localhost;      
 			 Port=3306;      
-			 Database=student_assessment_db;      
+			 Database=aejyndb;      
 			 Uid=root;      
 			 Pwd=;"
 		 providerName="MySql.Data.MySqlClient" />
