Inital commit - Backend

--- a/aejynmain/App.config
+++ b/aejynmain/App.config
@@ -1,10 +1,16 @@
-﻿<connectionStrings>
-	<add name="MySQLConnection"
-		 connectionString="
-			 Server=localhost;      
-			 Port=3306;      
-			 Database=aejyndb;      
-			 Uid=root;      
-			 Pwd=;"
-		 providerName="MySql.Data.MySqlClient" />
-</connectionStrings>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+	<connectionStrings>
+		<add name="MySQLConnection"
+             connectionString="
+             Server=localhost;
+             Port=3306;
+             Database=student_assessment_db;
+             Uid=root;
+             Pwd=;"
+             providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+</configuration>
