--- a/aejynmain/aejynmain.csproj
+++ b/aejynmain/aejynmain.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="Krypton.Toolkit" Version="100.25.11.328" />
     <PackageReference Include="MetroModernUI" Version="1.4.0" />
-    <PackageReference Include="MySqlConnector" Version="2.5.0" />
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
     <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
