--- a/aejynmain/aejynmain.csproj
+++ b/aejynmain/aejynmain.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
